@@ -15,6 +15,7 @@ CHANGELOG
 * Added key length check for mcrypt function to avoid wrong key size.
 * Fixed a bug with pagination on course archive page.
 * Fixed a bug with custom certificate background.
+* Added parsing video URL to add autoplay parameter.
 
 = 2.0.2 =
 -------------------------------------------------
